# sdl-3d

./: .gitignore  .gitmodules  CMakeLists.txt  run.bat
res/shaders/: basic.frag.glsl  basic.vert.glsl
src/: app.cpp  app.h  app_main.cpp  defines.h  gfx.cpp  gfx.h
